--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <section id="signup" class="signup container">
       <h2>Get Started Today</h2>
-      <form id="signupForm" action="https://formspree.io/f/yourformid" method="POST">
+      <form id="signupForm" action="https://formspree.io/f/mrblznez" method="POST">
         <input type="email" name="email" placeholder="Your email address" required />
         <button type="submit" class="btn-primary">Sign Up</button>
       </form>
