--- a/index.html
+++ b/index.html
@@ -72,5 +72,24 @@
       <p>© 2025 QueryPilot. All rights reserved.</p>
     </div>
   </footer>
+  <script>
+  const form = document.getElementById('signupForm');
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const formData = new FormData(form);
+    const response = await fetch(form.action, {
+      method: 'POST',
+      body: formData,
+      headers: { 'Accept': 'application/json' }
+    });
+    if (response.ok) {
+      alert('Thanks for signing up! We’ll be in touch soon.');
+      form.reset();
+    } else {
+      alert('Oops! There was a problem submitting your form.');
+    }
+  });
+</script>
+
 </body>
 </html>
